--- a/index.html
+++ b/index.html
@@ -1607,7 +1607,7 @@
     <!-- الصورة الشخصية -->
     <!-- الصورة الشخصية -->
 <div class="profile-image">
-  <img src="images/mh.jpeg" alt="صورة أ. محمد الغامدي">
+  <img src="images/hh.jpeg" alt="صورة أ. محمد الغامدي">
 </div>
 
     
@@ -2470,3 +2470,4 @@
 </script>
 </body>
 </html>
+
