--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
     /* شريط الإشعارات المعدل */
     .notification-bar {
-      background: linear-gradient(90deg, #E9E4F0, #D3CCE3);
+      background: linear-gradient(90deg, #ede9f2, #f7f5fa);
       color: var(--text-dark);
       padding: 8px 0;
       overflow: hidden;
@@ -2831,3 +2831,4 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 </body>
 </html>
+
