--- a/index.html
+++ b/index.html
@@ -424,14 +424,13 @@
       right: 0;
       left: 0;
       height: 5px;
-      background: linear-gradient(90deg, var(--primary-500) 0%, rgba(122, 67, 204, 0.5) 100%);
+      background: var(--primary-500);
       border-radius: 2px 2px 0 0;
       transition: height 0.3s ease;
     }
 
     .section-card:hover::before {
       height: 6px;
-      background: linear-gradient(90deg, var(--primary-500) 0%, var(--primary-400) 100%);
     }
 
     .section-card:hover {
@@ -1909,17 +1908,7 @@ body.dark-mode .user-message {
     <p>معلم التقنية الرقمية</p>
     <span> جهود مهنية ومحتوى تعليمي لجيل مبدع</span>
   </div>
-  <div class="floating-icons">
-    <!-- أيقونات الجانب الأيمن (كما هي) -->
-    <i class="fas fa-code icon-1"></i>
-    <i class="fas fa-robot icon-2"></i>
-    <i class="fas fa-laptop-code icon-3"></i>
-    
-    <!-- أيقونات الجانب الأيسر (الجديدة) -->
-    <i class="fas fa-microchip icon-4"></i>     <!-- معالج -->
-    <i class="fas fa-mouse icon-5"></i>         <!-- شكل الفأرة (الماوس) -->
-    <i class="fas fa-hdd icon-6"></i>           <!-- قرص صلب/تخزين -->
-  </div>
+ 
 </header>
 <!-- === نهاية الهيدر الجديد والمحسّن === -->
 
