--- a/index.html
+++ b/index.html
@@ -1885,6 +1885,11 @@ body.dark-mode .user-message {
   
   max-width: 900px;
   margin: 2rem auto 6rem auto;
+  padding: 2rem; /* إضافة مساحة داخلية للمحتوى */
+  background-color: rgba(122, 67, 204, 0.05); /* بنفسجي خفيف جداً وشفاف */
+  border-radius: 15px; /* حواف دائرية ناعمة */
+  border: 1px solid rgba(255, 255, 255, 0.1); /* إطار خفيف جداً للتحديد */
+  box-shadow: 0 8px 30px rgba(122, 67, 204, 0.1); /* ظل ناعم جداً بلون بنفسجي خفيف */
 
 }
 
