--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
     /* النص المنبثق - تم تعديل المسافة لترتبط بشكل أفضل بالصورة */
     .student-info {
       position: absolute;
-      bottom: calc(100% + 70px); /* تقليل المسافة من الأعلى */
+      top: -140px; /* تقليل المسافة من الأعلى */
       left: 50%;
       transform: translateX(-50%) translateY(10px);
       background: #4a2c7a;
@@ -1662,6 +1662,10 @@
         width: 320px;
       }
     }
+    .student-item.active .student-info {
+    transform: translateX(-50%) translateY(-130px) !important;
+}
+
   </style>
 </head>
 <body>
