--- a/index.html
+++ b/index.html
@@ -1750,7 +1750,7 @@
       <!-- الطالب الثاني -->
       <div class="student-item" data-index="1">
         <div class="student-image">
-          <img src="images/mh.jpeg" alt="الطالب المتميز الثاني">
+          <img src="images/ee.png" alt="الطالب المتميز الثاني">
         </div>
         <button class="info-toggle-btn" aria-label="إظهار معلومات الطالب">
           <i class="fas fa-plus"></i>
@@ -2778,3 +2778,4 @@
 </script>
 </body>
 </html>
+
