--- a/index.html
+++ b/index.html
@@ -696,7 +696,10 @@
       right: 0;
       left: 0;
       height: 5px;
-      background: var(--primary-500);
+     background: linear-gradient(90deg, 
+        #4a2c7a 0%, 
+        #9a69e6 50%, 
+        #14b8a6 100%);
       border-radius: 2px 2px 0 0;
       transition: height 0.3s ease;
     }
@@ -2778,4 +2781,5 @@
 </script>
 </body>
 </html>
+
 
