--- a/index.html
+++ b/index.html
@@ -2120,7 +2120,10 @@
   <div class="modal-content">
     <button id="closeInquiryModalBtn" class="modal-close-btn">&times;</button>
     <div class="modal-header">
-      <h2>الاستفسارات التعليمية</h2>
+      <h2 style="font-size: 1.5rem; white-space: nowrap; display: flex; align-items: center; gap: 10px; justify-content: center;">
+  <i class="fas fa-question-circle" style="color: #14b8a6; font-size: 1.3em;"></i>
+  الاستفسارات التعليمية
+</h2>
       <p>هذا النموذج مخصص لاستفسارات الطلاب التعليمية</p>
     </div>
     <iframe 
@@ -2781,6 +2784,7 @@
 </script>
 </body>
 </html>
+
 
 
 
