Update print statement from 'Hello' to 'Goodbye'
تحديث

--- a/index.html
+++ b/index.html
@@ -1749,7 +1749,7 @@
 <!-- ============================================ -->
 <section class="fame-bar-section fade-in">
   <div class="fame-bar-title">
-    <i class="fas fa-award"></i>
+    <i class="fas fa-trophy" style="color: #FFD700; text-shadow: 0 2px 4px rgba(255, 215, 0, 0.3);"></i>
     <span>قائمة التميز</span>
   </div>
   <p class="honors-subtitle">انقر على الأيقونة تحت كل صورة لمعرفة المزيد</p>
@@ -2807,6 +2807,7 @@
 </script>
 </body>
 </html>
+
 
 
 
