--- a/index.html
+++ b/index.html
@@ -1692,6 +1692,32 @@
     0 3px 15px rgba(122, 67, 204, 0.08),
     inset 0 0 0 1px rgba(255, 255, 255, 0.7);
 }
+    /* بديل أبسط */
+.honors-subtitle {
+  padding: 8px 16px;
+  background: var(--primary-100);
+  border-radius: 12px;
+  border: 1px solid var(--primary-300);
+  box-shadow: 0 3px 10px rgba(122, 67, 204, 0.08);
+  display: inline-block;
+  margin-bottom: 15px;
+}
+/* الخيار المتكامل */
+.fame-bar-title {
+  display: flex;
+  align-items: baseline; /* محاذاة حسب خط الأساس */
+  gap: 0.8rem;
+}
+
+.fame-bar-title i {
+  font-size: 1.6rem;
+}
+
+.fame-bar-title span {
+  font-size: 1.2rem;
+  position: relative;
+  top: -3px; /* اضبط هذه القيمة: 1px, 2px, 3px */
+}
   </style>
 </head>
 <body>
@@ -2807,6 +2833,7 @@
 </script>
 </body>
 </html>
+
 
 
 
