--- a/index.html
+++ b/index.html
@@ -1720,27 +1720,30 @@
 }
     /* تأثير زجاجي خفي */
 .honors-subtitle {
-  padding: 9px 24px;
+  padding: 10px 25px;
   background: rgba(255, 255, 255, 0.25);
-  border-radius: 16px;
-  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 18px;
+  border: 1px solid rgba(122, 67, 204, 0.1); /* ← تغيير طفيف هنا */
   display: inline-block;
   margin: 0 auto 15px;
   font-weight: 500;
-  color: var(--text-dark); /* لون النص الداكن */
+  color: var(--text-dark);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   box-shadow: 
-    0 2px 10px rgba(122, 67, 204, 0.05),
-    inset 0 0 0 1px rgba(255, 255, 255, 0.5);
+    0 3px 12px rgba(122, 67, 204, 0.08),
+    inset 0 0 0 1px rgba(255, 255, 255, 0.6);
   text-shadow: 0 1px 1px rgba(255, 255, 255, 0.5);
+  transition: all 0.3s ease;
 }
 
 .honors-subtitle:hover {
   background: rgba(255, 255, 255, 0.35);
+  border-color: rgba(122, 67, 204, 0.2); /* ← تأثير عند التمرير */
   box-shadow: 
-    0 3px 15px rgba(122, 67, 204, 0.08),
-    inset 0 0 0 1px rgba(255, 255, 255, 0.7);
+    0 5px 18px rgba(122, 67, 204, 0.12),
+    inset 0 0 0 1px rgba(255, 255, 255, 0.8);
+  transform: translateY(-2px);
 }
   </style>
 </head>
@@ -2857,6 +2860,7 @@
 </script>
 </body>
 </html>
+
 
 
 
