--- a/index.html
+++ b/index.html
@@ -2042,7 +2042,7 @@
     <div class="project-item" 
          data-type="image" 
          data-url="images/project1.jpg" 
-         data-form-url="https://docs.google.com/forms/d/e/YOUR_FORM_ID_1/viewform?usp=pp_url&entry.PROJECT_FIELD_ID=Project_A">
+         data-form-url="https://docs.google.com/forms/d/e/1FAIpQLSfMxwmcbyF6Um2aqTTGts5bg16yy5eAYfTaxDQ5Kk2GK9lbUQ/viewform?usp=pp_url&entry.622678742=%D8%AA%D8%B5%D9%85%D9%8A%D9%85+%D8%A7%D9%86%D9%81%D9%88%D8%AC%D8%B1%D8%A7%D9%81%D9%8A%D9%83">
       <div class="project-image-container">
         <img src="images/project1_thumb.jpg" alt="مشروع تصميم انفوجرافيك">
         <div class="project-type-icon"><i class="fas fa-paint-brush"></i></div>
@@ -3202,6 +3202,7 @@ function initProjectSection() {
 </script>
 </body>
 </html>
+
 
 
 
