--- a/index.html
+++ b/index.html
@@ -1745,6 +1745,151 @@
     inset 0 0 0 1px rgba(255, 255, 255, 0.8);
   transform: translateY(-2px);
 }
+/* ============================================ */
+/* ==========   قسم مواضيع التصويت   ========== */
+/* ============================================ */
+.voting-section {
+  max-width: 900px;
+  margin: 2.5rem auto;
+  padding: 1.5rem 1.8rem;
+  border-radius: 20px;
+  background: linear-gradient(to bottom, rgba(20, 184, 166, 0.03) 0%, rgba(122, 67, 204, 0.05) 100%);
+  box-shadow: 0 10px 25px rgba(122, 67, 204, 0.1);
+  border: 1px solid rgba(122, 67, 204, 0.2);
+  text-align: center;
+}
+
+.voting-title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.75rem;
+  font-size: 1.2rem;
+  font-weight: 700;
+  color: var(--accent-teal);
+  margin-bottom: 0.5rem;
+}
+
+.voting-title i {
+  font-size: 1.6rem;
+}
+
+.voting-subtitle {
+  margin: 0 0 1.5rem 0;
+  font-size: 0.9rem;
+  color: var(--text-light);
+  text-align: center;
+}
+
+.voting-card-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+.vote-card {
+  background: var(--card-bg);
+  border-radius: 15px;
+  padding: 1.5rem;
+  box-shadow: 0 8px 20px rgba(122, 67, 204, 0.1);
+  border: 1px solid rgba(122, 67, 204, 0.15);
+  transition: var(--transition);
+  text-align: right;
+}
+
+.vote-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 12px 30px rgba(122, 67, 204, 0.2);
+}
+
+.vote-card-title {
+  font-size: 1.3rem;
+  font-weight: 700;
+  color: var(--primary-600);
+  margin-bottom: 1.5rem;
+  padding-bottom: 0.75rem;
+  border-bottom: 1px solid rgba(122, 67, 204, 0.2);
+}
+
+.vote-options {
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+  margin-bottom: 2rem;
+}
+
+.vote-option {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+  min-width: 120px;
+}
+
+.vote-option-name {
+  font-size: 1rem;
+  font-weight: 600;
+  color: var(--text-dark);
+}
+
+.vote-counter {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  background-color: var(--primary-soft-2);
+  padding: 5px 12px;
+  border-radius: 20px;
+  font-size: 1.1rem;
+  font-weight: 700;
+  color: var(--primary-500);
+  transition: all 0.3s ease;
+}
+
+.vote-counter i {
+  font-size: 1.1rem;
+  color: var(--primary-400);
+}
+
+.vote-button {
+  display: inline-block;
+  width: 100%;
+  background-color: var(--accent-teal);
+  color: white;
+  padding: 12px 20px;
+  border-radius: 10px;
+  text-decoration: none;
+  font-size: 1.1rem;
+  font-weight: 700;
+  text-align: center;
+  transition: var(--transition);
+  border: none;
+  cursor: pointer;
+}
+
+.vote-button:hover {
+  background-color: #0d9488;
+  transform: scale(1.02);
+  box-shadow: 0 5px 15px rgba(20, 184, 166, 0.3);
+}
+
+/* تعديلات للجوال */
+@media (max-width: 768px) {
+  .voting-section {
+    padding: 1.3rem 1rem;
+  }
+  .vote-card {
+    padding: 1.2rem;
+  }
+  .vote-card-title {
+    font-size: 1.15rem;
+  }
+  .vote-options {
+    justify-content: center;
+  }
+}
+
   </style>
 </head>
 <body>
@@ -1859,6 +2004,20 @@
   </div>
   
   <!-- تم إزالة النقاط الثلاثة تماماً -->
+</section>
+<!-- ============================================ -->
+<!-- ==========     قسم مواضيع التصويت     ========== -->
+<!-- ============================================ -->
+<section class="voting-section fade-in" id="voting-section">
+  <div class="voting-title">
+    <i class="fas fa-poll-h"></i>
+    <span>مواضيع التصويت</span>
+  </div>
+  <p class="voting-subtitle">شارك برأيك وادعم المشاريع المتميزة</p>
+
+  <div class="voting-card-container" id="voting-card-container">
+    <!-- سيتم إضافة بطاقة التصويت هنا بواسطة JavaScript لاحقاً -->
+  </div>
 </section>
 
 <!-- ========================================= -->
@@ -2856,10 +3015,121 @@
       window.scrollTo(0, 0);
     }, 500);
   });
+// =================================================
+//          وظائف قسم التصويت
+// =================================================
+
+function initVotingSection() {
+  // --- ابدأ التعديل هنا في المستقبل ---
+  const votingTopics = [
+    {
+      title: "تصويت تجريبي: أفضل مشروع",
+      googleSheetURL: "https://docs.google.com/spreadsheets/d/1Qyh8URnokiUGM_y6ve_htiKfUKjJNfR2GZlO7q7bUFs/edit?usp=sharing",
+      googleFormURL: "https://forms.gle/aNu78K9TtAWFmnpD6",
+      options: ["المشروع الأول", "المشروع الثاني", "المشروع الثالث"]
+    }
+    // يمكنك إضافة مواضيع تصويت أخرى هنا مستقبلاً كهذا:
+    // ,{
+    //   title: "عنوان التصويت الجديد",
+    //   googleSheetURL: "رابط الشيت الجديد",
+    //   googleFormURL: "رابط الفورم الجديد",
+    //   options: ["خيار 1", "خيار 2", "خيار 3"]
+    // }
+  ];
+  // --- انتهي من التعديل هنا ---
+
+  const container = document.getElementById('voting-card-container' );
+  if (!container) return;
+
+  // مسح المحتوى القديم قبل إضافة الجديد
+  container.innerHTML = '';
+
+  votingTopics.forEach(topic => {
+    const card = createVotingCard(topic);
+    container.appendChild(card);
+    updateVotes(topic, card); // التحديث الأول فور التحميل
+    setInterval(() => updateVotes(topic, card), 60000); // تحديث كل 60 ثانية
+  });
+}
+
+function createVotingCard(topic) {
+  const card = document.createElement('div');
+  card.className = 'vote-card';
+
+  let optionsHTML = '';
+  topic.options.forEach((optionName, index) => {
+    optionsHTML += `
+      <div class="vote-option" data-option-name="${optionName}">
+        <div class="vote-option-name">${optionName}</div>
+        <div class="vote-counter">
+          <i class="fas fa-thumbs-up"></i>
+          <span class="count">0</span>
+        </div>
+      </div>
+    `;
+  });
+
+  card.innerHTML = `
+    <h3 class="vote-card-title">${topic.title}</h3>
+    <div class="vote-options">
+      ${optionsHTML}
+    </div>
+    <a href="${topic.googleFormURL}" target="_blank" class="vote-button">
+      <i class="fas fa-vote-yea"></i> صوّت الآن
+    </a>
+  `;
+  return card;
+}
+
+async function updateVotes(topic, card) {
+  try {
+    // تحويل رابط الشيت إلى رابط CSV قابل للقراءة
+    const sheetId = topic.googleSheetURL.split('/d/')[1].split('/')[0];
+    const csvUrl = `https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:csv&sheet=Sheet1`;
+
+    const response = await fetch(csvUrl );
+    if (!response.ok) throw new Error('فشل تحميل البيانات');
+    
+    const csvText = await response.text();
+    const allVotes = csvText.split('\n').map(row => row.replace(/"/g, '')).slice(1); // إزالة العناوين والتعامل مع الصفوف
+
+    // حساب الأصوات لكل خيار
+    const voteCounts = {};
+    topic.options.forEach(option => voteCounts[option] = 0); // تهيئة العدادات
+
+    allVotes.forEach(vote => {
+      if (voteCounts.hasOwnProperty(vote)) {
+        voteCounts[vote]++;
+      }
+    });
+
+    // تحديث الأرقام على البطاقة
+    topic.options.forEach(optionName => {
+      const optionElement = card.querySelector(`.vote-option[data-option-name="${optionName}"]`);
+      if (optionElement) {
+        const countSpan = optionElement.querySelector('.count');
+        countSpan.textContent = voteCounts[optionName];
+      }
+    });
+
+  } catch (error) {
+    console.error("خطأ في تحديث الأصوات:", error);
+    // يمكنك إضافة رسالة خطأ للمستخدم هنا إذا أردت
+  }
+}
+
+// استدعاء الدالة الرئيسية عند تحميل الصفحة
+document.addEventListener('DOMContentLoaded', function() {
+    // ... (الكود الموجود لديك بالفعل) ...
+    
+    // أضف هذا السطر الجديد
+    initVotingSection(); 
+});
 
 </script>
 </body>
 </html>
+
 
 
 
