--- a/index.html
+++ b/index.html
@@ -3024,8 +3024,8 @@ function initVotingSection() {
   const votingTopics = [
     {
       title: "تصويت تجريبي: أفضل مشروع",
-      googleSheetURL: "https://docs.google.com/spreadsheets/d/1Qyh8URnokiUGM_y6ve_htiKfUKjJNfR2GZlO7q7bUFs/edit?usp=sharing",
-      googleFormURL: "https://forms.gle/aNu78K9TtAWFmnpD6",
+      googleSheetURL: "https://docs.google.com/spreadsheets/d/e/2PACX-1vSriucbUC9OTv2lXblW0b5qqYJw_RJRxQFTl0Gr-pGV_PnHKwhnbVGlmDKBr5e-Ko8v1X6b3ZrzNLGV/pub?output=csv",
+      googleFormURL: "https://forms.gle/z56LHS5gpAv3jjiB8",
       options: ["المشروع الأول", "المشروع الثاني", "المشروع الثالث"]
     }
     // يمكنك إضافة مواضيع تصويت أخرى هنا مستقبلاً كهذا:
