--- a/index.html
+++ b/index.html
@@ -3024,7 +3024,7 @@ function initVotingSection() {
   const votingTopics = [
     {
       title: "تصويت تجريبي: أفضل مشروع",
-      googleSheetURL: "https://docs.google.com/spreadsheets/d/e/2PACX-1vSriucbUC9OTv2lXblW0b5qqYJw_RJRxQFTl0Gr-pGV_PnHKwhnbVGlmDKBr5e-Ko8v1X6b3ZrzNLGV/pub?output=csv",
+      googleSheetURL: "https://docs.google.com/spreadsheets/d/1yerJFSeoJkHX1WfDzb5wBh_O4tMz2awuVKayrNa5kHs/edit?usp=sharing",
       googleFormURL: "https://forms.gle/z56LHS5gpAv3jjiB8",
       options: ["المشروع الأول", "المشروع الثاني", "المشروع الثالث"]
     }
@@ -3129,15 +3129,3 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
