--- a/index.html
+++ b/index.html
@@ -3030,7 +3030,8 @@ function initVotingSystem() {
   // 1. إعدادات الاتصال بـ Firebase
   // !!! هام: استبدل الرابط بالرابط الخاص بك !!!
   var firebaseConfig = {
-    databaseURL: "https://voting-website-1bc61-default-rtdb.firebaseio.com/",};
+    databaseURL: "https://voting-website-1bc61-default-rtdb.firebaseio.com/",
+  };
  
 
 
@@ -3084,3 +3085,4 @@ function initVotingSystem() {
 
 </body>
 </html>
+
