--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     /*      الهيدر الجديد - مع خلفية صورة      */
     /* ========================================= */
     .tech-header {
-      background-image: url('images/no.png'); /* يمكنك تغيير هذا المسار */
+      background-image: url('images/edt.png'); /* يمكنك تغيير هذا المسار */
       background-size: cover;
       background-position: center center;
       background-repeat: no-repeat;
@@ -2375,7 +2375,7 @@
   <p class="discord-description">انضم إلى مجتمعنا على ديسكورد للنقاش الفوري وطرح الأسئلة.</p>
   
   <div class="projects-container">
-    <a href="HERE_IS_YOUR_INVITE_LINK" target="_blank" class="discord-btn">
+    <a href="https://discord.com/channels/1451571438220738562/1451571441278517270" target="_blank" class="discord-btn">
       <i class="fas fa-sign-in-alt"></i>
       <span>ادخل إلى ساحة النقاش</span>
     </a>
@@ -3342,3 +3342,4 @@
 </script>
 </body>
 </html>
+
