--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     /*      الهيدر الجديد - مع خلفية صورة      */
     /* ========================================= */
     .tech-header {
-      background-image: url('images/edt.png'); /* يمكنك تغيير هذا المسار */
+      background-image: url('images/rt.png'); /* يمكنك تغيير هذا المسار */
       background-size: cover;
       background-position: center center;
       background-repeat: no-repeat;
@@ -3342,4 +3342,5 @@
 </script>
 </body>
 </html>
+
 
