--- a/index.html
+++ b/index.html
@@ -2375,7 +2375,7 @@
   <p class="discord-description">انضم إلى مجتمعنا على ديسكورد للنقاش الفوري وطرح الأسئلة.</p>
   
   <div class="projects-container">
-    <a href="https://discord.com/channels/1451571438220738562/1451571441278517270" target="_blank" class="discord-btn">
+    <a href="https://discord.gg/Cq9mn7Yr" target="_blank" class="discord-btn">
       <i class="fas fa-sign-in-alt"></i>
       <span>ادخل إلى ساحة النقاش</span>
     </a>
@@ -3342,6 +3342,7 @@
 </script>
 </body>
 </html>
+
 
 
 
