--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
     .unified-student-info.active {
       opacity: 1;
       visibility: visible;
-      transform: translateX(-50%) translateY(0);
+      transform: translateX(-50%) translateY(-10px);
       pointer-events: auto;
     }
 
@@ -3689,3 +3689,4 @@
 </script>
 </body>
 </html>
+
