--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     /*      الهيدر الجديد - مع خلفية صورة      */
     /* ========================================= */
     .tech-header {
-      background-image: url('images/rrr.png');
+      background-image: url('images/er.png');
       background-size: cover;
       background-position: center center;
       background-repeat: no-repeat;
@@ -973,6 +973,7 @@
       background-clip: text;
       -webkit-text-fill-color: transparent;
       animation: pulse 2s infinite;
+      transform: translateY(5px);
     }
 
     @keyframes pulse {
@@ -2931,7 +2932,7 @@
   </h2>
   
   <p class="ai-description">
-    اسأل عن أي موضوع في التقنية الرقمية أو غيرها من المواضيع 
+     شريكك الذكي في رحلة التعلم الرقمي.
   </p>
   
   <div class="ai-chat-container">
@@ -3694,3 +3695,4 @@
 </script>
 </body>
 </html>
+
