--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     /*      الهيدر الجديد - مع خلفية صورة      */
     /* ========================================= */
     .tech-header {
-      background-image: url('images/er.png');
+      background-image: url('images/cc.png');
       background-size: cover;
       background-position: center center;
       background-repeat: no-repeat;
@@ -3695,4 +3695,5 @@
 </script>
 </body>
 </html>
+
 
