--- a/index.html
+++ b/index.html
@@ -958,7 +958,7 @@
       position: relative;
       font-weight: 700;
       display: flex;
-      align-items: center;
+       align-items: baseline;
       justify-content: center;
       gap: 1rem;
     }
@@ -3695,5 +3695,6 @@
 </script>
 </body>
 </html>
+
 
 
