--- a/index.html
+++ b/index.html
@@ -2479,7 +2479,7 @@
       <!-- الطالب الأول -->
       <div class="student-item" data-index="0">
         <div class="student-image">
-          <img src="images/mh.jpeg" alt="الطالب المتميز الأول">
+          <img src="images/hh.jpeg" alt="الطالب المتميز الأول">
         </div>
         <button class="info-toggle-btn" aria-label="إظهار معلومات الطالب">
           <i class="fas fa-plus"></i>
@@ -2499,7 +2499,7 @@
       <!-- الطالب الثالث -->
       <div class="student-item" data-index="2">
         <div class="student-image">
-          <img src="images/mh.jpeg" alt="الطالب المتميز الثالث">
+          <img src="images/hh.jpeg" alt="الطالب المتميز الثالث">
         </div>
         <button class="info-toggle-btn" aria-label="إظهار معلومات الطالب">
           <i class="fas fa-plus"></i>
@@ -3695,6 +3695,7 @@
 </script>
 </body>
 </html>
+
 
 
 
